fix: wrap socials links; prevent word wrap

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -108,11 +108,15 @@
     &__socials {
         svg {
             height: 2rem;
-            margin-left: 0.5rem;
-            margin-right: 0.5rem;
+            margin-left: 1rem;
             position: relative;
             top: 0.2rem;
             width: 2rem;
+        }
+
+        span {
+            display: inline-block;
+            white-space: nowrap;
         }
     }
 
